# limitedOrderBook

./: .clang-format  .clang-tidy  .gitignore  CmakeLists.txt  README.md  format-all-files.ps1  vcpkg.json  workspace.code-workspace
app/: CMakeLists.txt  main.cc  market.cc
app/market/: CMakeLists.txt
app/market-bot-gui/: CMakeLists.txt
app/marketBot/: CMakeLists.txt  marketbot.cc
app/marketBot/inc/: abstractBot.hh  common_topics.hh  config.hh  multiSimple.hh  simpleBot.hh  smartBot.hh
app/marketBot/inc/repositories/: genericRepository.hh  orderRepository.hh  tradeRepository.hh
app/marketBot/inc/services/: orderBookService.hh  priceLevelService.hh  tradeService.hh
app/marketBot/src/: main.cc
app/marketServer/: CMakeLists.txt  a.json  marketServer.cc
app/marketServer/inc/: common_topics.hh  marketServer.hh  metrics.hh
app/marketServer/inc/commands/: command.hh  commandFactory.hh  putOrderCommand.hh  stopCommand.hh
app/marketServer/inc/commands/factory/: commandFactory.hh
app/marketServer/inc/controller/: marketController.hh
app/marketServer/inc/controllers/: marketController.hh
app/marketServer/inc/mediators/: marketMediator.hh
app/marketServer/inc/repositories/: genericRepository.hh  orderRepository.hh  priceLevelRepository.hh
app/marketServer/inc/services/: orderBookService.hh  priceLevelService.hh  tradeService.hh  tradeTrackerService.hh
app/marketServer/inc/services/repositories/: genericRepository.hh  priceLevelRepository.hh  tradeRepository.hh
app/marketServer/src/: main.cc  marketServer.cc
app/marketServer/src/commands/factory/: commandFactory.cc
app/marketServer/src/controllers/: marketController.cc
inc/: book.h  bot.hh  data_structs.h  metrics.hh  order.h  order.hh  orderBook.hh  orderBookServer.hh  priceLevel.hh  structs.h  trade.hh
inc/bot/: bot.hh  buyerBot.hh  marketMakerBot.hh  sellerBot.hh
lib/: CmakeLists.txt
lib/lib-market/: CMakeLists.txt
lib/lib-market-simulator/: CMakeLists.txt
lib/lib-market-simulator/inc/: bot.hh  buyerBot.hh  marketMakerBot.hh  marketSimulator.hh  sellerBot.hh
lib/lib-market-simulator/src/: marketSimulator.cc  sellerBot.cc
lib/lib-market-simulator/test/: test_buyerBot.cc  test_marketSimulator.cc  test_sellerBot.cc
lib/lib-market/inc/: MultiMarketClient.hh  MultiMarketServer.hh  common.hh  marketClient.hh  marketServer.hh
lib/lib-market/inc/commands/: getMetricsCommand.hh  matchOrdersCommand.hh  putOrderCommand.hh  stopCommand.hh
lib/lib-market/inc/commands/abstract/: command.hh
lib/lib-market/inc/commands/factory/: commandFactory.hh
lib/lib-market/inc/controllers/: marketController.hh
lib/lib-market/inc/formatters/: custom_formatter.hh
lib/lib-market/inc/mediators/: marketMediator.hh
lib/lib-market/inc/models/: order.hh  orderType.hh  priceLevel.hh  trade.hh
lib/lib-market/inc/repositories/: genericRepository.hh  orderRepository.hh  priceLevelRepository.hh  tradeRepository.hh
lib/lib-market/inc/routers/: MarketServiceRouter.hh
lib/lib-market/inc/services/: MultiOrderBookService.hh  MultiTradeTrackerService.hh  orderBookService.hh  priceLevelService.hh  tradeService.hh  tradeTrackerService.hh
lib/lib-market/src/: MultiMarketServer.cc  marketServer.cc
lib/lib-market/src/commands/factory/: commandFactory.cc
lib/lib-market/src/controllers/: marketController.cc
lib/lib-market/src/services/: MultiOrderBookService.cc  MultiTradeTrackerService.cc
lib/lib-models/: CMakeLists.txt
lib/lib-models/inc/: metrics.hh  order.hh  orderBook.hh  orderType.hh  priceLevel.hh  trade.hh
lib/lib-models/src/: order.cc  orderBook.cc
lib/lib-models/test/: test_order.cc  test_orderBook.cc  test_priceLevel.cc
output/: 1_SELL.csv  2_SELL.csv  3_BUY.csv
src/: main.c  order.cc  orderBook.cc  orderBookServer.cc  priceLevel.cc
src/bot/: buyerBot.cc  marketMakerBot.cc  sellerBot.cc
src/hashmap/: book.c  order.c
test/: test_order.cc  test_orderBook.cc  test_priceLevel.cc
test/hashmap/: test_book.c  test_order.c  test_structs.c
