project(server-side-app)
set(SOURCES src/main.cc )
add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(${PROJECT_NAME} PRIVATE lib-market  )
file(GLOB_RECURSE files *.cc *.hh)

foreach(line IN LISTS files)
    string(APPEND multiline "[${PROJECT_NAME}] :: ${line}\n")
endforeach() 
message("${multiline}")